--- a/src/output.css
+++ b/src/output.css
@@ -578,10 +578,6 @@ video {
   }
 }
 
-.visible {
-  visibility: visible;
-}
-
 .static {
   position: static;
 }
@@ -602,12 +598,36 @@ video {
   right: 15rem;
 }
 
+.top-1 {
+  top: 0.25rem;
+}
+
 .top-44 {
   top: 11rem;
 }
 
-.top-1 {
-  top: 0.25rem;
+.left-1 {
+  left: 0.25rem;
+}
+
+.-top-1 {
+  top: -0.25rem;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.left-8 {
+  left: 2rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.left-6 {
+  left: 1.5rem;
 }
 
 .left-0 {
@@ -655,6 +675,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -699,36 +723,28 @@ video {
   margin-top: 2rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.-mt-2 {
+  margin-top: -0.5rem;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
+.-mt-1 {
+  margin-top: -0.25rem;
 }
 
-.ml-3 {
-  margin-left: 0.75rem;
+.-mt-1\.5 {
+  margin-top: -0.375rem;
 }
 
-.mr-5 {
-  margin-right: 1.25rem;
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
-.ml-6 {
-  margin-left: 1.5rem;
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mr-14 {
-  margin-right: 3.5rem;
-}
-
-.ml-14 {
-  margin-left: 3.5rem;
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
 .block {
@@ -737,10 +753,6 @@ video {
 
 .flex {
   display: flex;
-}
-
-.inline-flex {
-  display: inline-flex;
 }
 
 .grid {
@@ -753,26 +765,6 @@ video {
 
 .h-4 {
   height: 1rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-\[100\%\] {
-  height: 100%;
 }
 
 .max-h-\[32px\] {
@@ -799,20 +791,20 @@ video {
   width: 100%;
 }
 
-.w-10 {
-  width: 2.5rem;
+.w-1\/3 {
+  width: 33.333333%;
 }
 
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-\[20px\] {
-  width: 20px;
+.w-80 {
+  width: 20rem;
 }
 
 .max-w-16 {
   max-width: 4rem;
+}
+
+.max-w-6 {
+  max-width: 1.5rem;
 }
 
 .max-w-lg {
@@ -823,28 +815,48 @@ video {
   max-width: 20rem;
 }
 
-.max-w-1 {
-  max-width: 0.25rem;
-}
-
-.max-w-1\.5 {
-  max-width: 0.375rem;
+.max-w-\[280px\] {
+  max-width: 280px;
 }
 
 .max-w-8 {
   max-width: 2rem;
 }
 
-.max-w-4 {
-  max-width: 1rem;
+.max-w-14 {
+  max-width: 3.5rem;
 }
 
-.max-w-5 {
-  max-width: 1.25rem;
+.max-w-24 {
+  max-width: 6rem;
 }
 
-.max-w-6 {
-  max-width: 1.5rem;
+.max-w-64 {
+  max-width: 16rem;
+}
+
+.max-w-44 {
+  max-width: 11rem;
+}
+
+.max-w-48 {
+  max-width: 12rem;
+}
+
+.max-w-7 {
+  max-width: 1.75rem;
+}
+
+.max-w-72 {
+  max-width: 18rem;
+}
+
+.max-w-xl {
+  max-width: 36rem;
+}
+
+.max-w-md {
+  max-width: 28rem;
 }
 
 .-rotate-12 {
@@ -885,12 +897,12 @@ video {
   place-items: center;
 }
 
-.items-center {
-  align-items: center;
+.items-start {
+  align-items: flex-start;
 }
 
-.items-stretch {
-  align-items: stretch;
+.items-center {
+  align-items: center;
 }
 
 .justify-center {
@@ -915,6 +927,18 @@ video {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
@@ -971,18 +995,6 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.space-x-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1003,6 +1015,27 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-\[\] {
+  border-radius: ;
+}
+
+.rounded-\[3\.\] {
+  border-radius: 3.;
+}
+
+.rounded-\[3\.5rem\] {
+  border-radius: 3.5rem;
+}
+
+.rounded-t-\[3\.5rem\] {
+  border-top-left-radius: 3.5rem;
+  border-top-right-radius: 3.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1011,29 +1044,17 @@ video {
   border-width: 4px;
 }
 
-.border-0 {
-  border-width: 0px;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
 .border-x {
   border-left-width: 1px;
   border-right-width: 1px;
 }
 
-.border-l {
-  border-left-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
+}
+
+.border-l {
+  border-left-width: 1px;
 }
 
 .border-l-8 {
@@ -1042,6 +1063,19 @@ video {
 
 .border-t {
   border-top-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-4 {
+  border-bottom-width: 4px;
+}
+
+.border-\[\#6975e3\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(105 117 227 / var(--tw-border-opacity));
 }
 
 .border-\[\#EF9787\] {
@@ -1054,9 +1088,19 @@ video {
   border-color: rgb(255 118 72 / var(--tw-border-opacity));
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-green-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(134 239 172 / var(--tw-border-opacity));
 }
 
 .border-white {
@@ -1064,43 +1108,8 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-\[\#3F52FF\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(63 82 255 / var(--tw-border-opacity));
-}
-
 .border-\[\] {
   border-color: ;
-}
-
-.border-blue-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity));
-}
-
-.border-blue-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(29 78 216 / var(--tw-border-opacity));
-}
-
-.border-\[\#192eed\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(25 46 237 / var(--tw-border-opacity));
-}
-
-.border-\[\#6975e3\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(105 117 227 / var(--tw-border-opacity));
-}
-
-.border-green-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(134 239 172 / var(--tw-border-opacity));
 }
 
 .border-x-black {
@@ -1114,9 +1123,34 @@ video {
   border-top-color: rgb(230 220 207 / var(--tw-border-opacity));
 }
 
+.border-b-gray-400 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
+.border-b-gray-300 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-b-\[\#E6DCCF\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(230 220 207 / var(--tw-border-opacity));
+}
+
+.bg-\[\#3F52FF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 82 255 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#DDE0FD\] {
   --tw-bg-opacity: 1;
   background-color: rgb(221 224 253 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#E6DCCF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 220 207 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#EF9787\] {
@@ -1124,19 +1158,24 @@ video {
   background-color: rgb(239 151 135 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F2EDE6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 237 230 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#F4F4F4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(244 244 244 / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-orange-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
-}
-
-.bg-red-950 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(69 10 10 / var(--tw-bg-opacity));
 }
 
 .bg-transparent {
@@ -1148,54 +1187,18 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F3E5B9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 229 185 / var(--tw-bg-opacity));
+}
+
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-indigo-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#3F52FF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 82 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#F2EDE6\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 237 230 / var(--tw-bg-opacity));
-}
-
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.bg-lime-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(77 124 15 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#E6DCCF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(230 220 207 / var(--tw-bg-opacity));
+.bg-\[\] {
+  background-color: ;
 }
 
 .object-cover {
@@ -1211,18 +1214,6 @@ video {
   padding: 1.25rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-1\.5 {
-  padding: 0.375rem;
-}
-
-.p-\[8px\] {
-  padding: 8px;
-}
-
 .p-\[5px\] {
   padding: 5px;
 }
@@ -1231,8 +1222,17 @@ video {
   padding: 1rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
+.p-6 {
+  padding: 1.5rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .px-10 {
@@ -1245,9 +1245,19 @@ video {
   padding-right: 4rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-24 {
   padding-left: 6rem;
   padding-right: 6rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -1258,6 +1268,11 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-1 {
@@ -1300,29 +1315,9 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-10 {
@@ -1331,6 +1326,10 @@ video {
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
 }
 
 .pl-4 {
@@ -1353,44 +1352,44 @@ video {
   padding-inline-start: 0.875rem;
 }
 
+.ps-6 {
+  padding-inline-start: 1.5rem;
+}
+
 .pl-6 {
   padding-left: 1.5rem;
 }
 
-.pl-10 {
-  padding-left: 2.5rem;
+.pr-8 {
+  padding-right: 2rem;
 }
 
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.ps-14 {
-  padding-inline-start: 3.5rem;
-}
-
-.ps-4 {
-  padding-inline-start: 1rem;
+.ps-8 {
+  padding-inline-start: 2rem;
 }
 
 .ps-10 {
   padding-inline-start: 2.5rem;
 }
 
-.ps-2 {
-  padding-inline-start: 0.5rem;
+.ps-9 {
+  padding-inline-start: 2.25rem;
 }
 
-.ps-6 {
-  padding-inline-start: 1.5rem;
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pb-14 {
+  padding-bottom: 3.5rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
 }
 
 .text-center {
@@ -1446,24 +1445,28 @@ video {
   font-weight: 700;
 }
 
-.font-medium {
-  font-weight: 500;
-}
-
 .font-light {
   font-weight: 300;
 }
 
-.font-extralight {
-  font-weight: 200;
+.font-medium {
+  font-weight: 500;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.leading-7 {
+  line-height: 1.75rem;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
 }
 
 .tracking-widest {
   letter-spacing: 0.1em;
-}
-
-.tracking-wide {
-  letter-spacing: 0.025em;
 }
 
 .text-\[\#6B6A64\] {
@@ -1481,6 +1484,11 @@ video {
   color: rgb(255 121 25 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
@@ -1489,11 +1497,6 @@ video {
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-gray-600 {
@@ -1506,13 +1509,23 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.text-black {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.underline {
-  text-decoration-line: underline;
+.text-\[\] {
+  color: ;
+}
+
+.text-\[\#48484d\] {
+  --tw-text-opacity: 1;
+  color: rgb(72 72 77 / var(--tw-text-opacity));
+}
+
+.text-\[\#1f1f1f\] {
+  --tw-text-opacity: 1;
+  color: rgb(31 31 31 / var(--tw-text-opacity));
 }
 
 .shadow {
@@ -1533,13 +1546,23 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-\[\#3F52FF\] {
+  --tw-shadow-color: #3F52FF;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .shadow-black {
   --tw-shadow-color: #000;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-\[\#3F52FF\] {
-  --tw-shadow-color: #3F52FF;
+.shadow-\[\] {
+  --tw-shadow-color: ;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#393939\] {
+  --tw-shadow-color: #393939;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -1592,14 +1615,34 @@ video {
   position: absolute;
 }
 
+.after\:left-0::after {
+  content: var(--tw-content);
+  left: 0px;
+}
+
 .after\:top-0::after {
   content: var(--tw-content);
   top: 0px;
 }
 
-.after\:left-0::after {
+.after\:-top-0::after {
   content: var(--tw-content);
-  left: 0px;
+  top: -0px;
+}
+
+.after\:-top-1::after {
+  content: var(--tw-content);
+  top: -0.25rem;
+}
+
+.after\:bottom-1::after {
+  content: var(--tw-content);
+  bottom: 0.25rem;
+}
+
+.after\:-bottom-1::after {
+  content: var(--tw-content);
+  bottom: -0.25rem;
 }
 
 .after\:h-\[100\%\]::after {
@@ -1607,45 +1650,14 @@ video {
   height: 100%;
 }
 
-.after\:w-10::after {
+.after\:h-full::after {
   content: var(--tw-content);
-  width: 2.5rem;
-}
-
-.after\:w-1::after {
-  content: var(--tw-content);
-  width: 0.25rem;
-}
-
-.after\:w-4::after {
-  content: var(--tw-content);
-  width: 1rem;
-}
-
-.after\:w-14::after {
-  content: var(--tw-content);
-  width: 3.5rem;
-}
-
-.after\:w-8::after {
-  content: var(--tw-content);
-  width: 2rem;
-}
-
-.after\:w-5::after {
-  content: var(--tw-content);
-  width: 1.25rem;
+  height: 100%;
 }
 
 .after\:w-7::after {
   content: var(--tw-content);
   width: 1.75rem;
-}
-
-.after\:bg-orange-600::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 88 12 / var(--tw-bg-opacity));
 }
 
 .after\:bg-\[\#3F52FF\]::after {
@@ -1654,18 +1666,14 @@ video {
   background-color: rgb(63 82 255 / var(--tw-bg-opacity));
 }
 
-.after\:content-\[\'\*\'\]::after {
-  --tw-content: '*';
+.after\:bg-\[\#2FC97F\]::after {
   content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(47 201 127 / var(--tw-bg-opacity));
 }
 
 .after\:content-\[\'\'\]::after {
   --tw-content: '';
-  content: var(--tw-content);
-}
-
-.after\:content-\[\'\&nbsp\;\'\]::after {
-  --tw-content: '&nbsp;';
   content: var(--tw-content);
 }
 
@@ -1694,22 +1702,8 @@ video {
   background-color: rgb(163 230 53 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
 .hover\:font-bold:hover {
   font-weight: 700;
-}
-
-.hover\:font-medium:hover {
-  font-weight: 500;
-}
-
-.hover\:text-gray-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -1721,11 +1715,6 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
 @media (min-width: 768px) {
   .md\:mb-0 {
     margin-bottom: 0px;
@@ -1733,10 +1722,6 @@ video {
 
   .md\:ml-auto {
     margin-left: auto;
-  }
-
-  .md\:mt-0 {
-    margin-top: 0px;
   }
 
   .md\:flex-row {
