--- a/src/output.css
+++ b/src/output.css
@@ -594,6 +594,18 @@ video {
   inset: 0px;
 }
 
+.-top-2 {
+  top: -0.5rem;
+}
+
+.-top-2\.5 {
+  top: -0.625rem;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
 .right-60 {
   right: 15rem;
 }
@@ -606,36 +618,41 @@ video {
   top: 11rem;
 }
 
-.left-1 {
-  left: 0.25rem;
+.bottom-0 {
+  bottom: 0px;
 }
 
-.-top-1 {
-  top: -0.25rem;
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
 }
 
 .left-2 {
   left: 0.5rem;
 }
 
-.left-8 {
-  left: 2rem;
+.bottom-5 {
+  bottom: 1.25rem;
 }
 
-.top-2 {
-  top: 0.5rem;
+.bottom-10 {
+  bottom: 2.5rem;
 }
 
-.left-6 {
-  left: 1.5rem;
+.left-3 {
+  left: 0.75rem;
 }
 
-.left-0 {
-  left: 0px;
+.left-4 {
+  left: 1rem;
 }
 
-.top-0 {
-  top: 0px;
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .mx-24 {
@@ -667,8 +684,20 @@ video {
   margin-left: -7rem;
 }
 
+.-mt-1 {
+  margin-top: -0.25rem;
+}
+
+.-mt-1\.5 {
+  margin-top: -0.375rem;
+}
+
 .-mt-3 {
   margin-top: -0.75rem;
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
 .mb-2 {
@@ -715,6 +744,10 @@ video {
   margin-top: 5rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -723,28 +756,8 @@ video {
   margin-top: 2rem;
 }
 
-.-mt-2 {
-  margin-top: -0.5rem;
-}
-
-.-mt-1 {
-  margin-top: -0.25rem;
-}
-
-.-mt-1\.5 {
-  margin-top: -0.375rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
-}
-
-.mb-14 {
-  margin-bottom: 3.5rem;
+.mb-24 {
+  margin-bottom: 6rem;
 }
 
 .block {
@@ -767,8 +780,16 @@ video {
   height: 1rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .max-h-\[32px\] {
   max-height: 32px;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .w-11\/12 {
@@ -791,20 +812,24 @@ video {
   width: 100%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
 .max-w-16 {
   max-width: 4rem;
 }
 
+.max-w-48 {
+  max-width: 12rem;
+}
+
 .max-w-6 {
   max-width: 1.5rem;
+}
+
+.max-w-72 {
+  max-width: 18rem;
+}
+
+.max-w-\[280px\] {
+  max-width: 280px;
 }
 
 .max-w-lg {
@@ -815,48 +840,32 @@ video {
   max-width: 20rem;
 }
 
-.max-w-\[280px\] {
-  max-width: 280px;
+.max-w-80 {
+  max-width: 20rem;
 }
 
-.max-w-8 {
-  max-width: 2rem;
+.max-w-\[30rem\] {
+  max-width: 30rem;
 }
 
-.max-w-14 {
-  max-width: 3.5rem;
+.max-w-\[24rem\] {
+  max-width: 24rem;
 }
 
-.max-w-24 {
-  max-width: 6rem;
+.max-w-\[20rem\] {
+  max-width: 20rem;
 }
 
-.max-w-64 {
-  max-width: 16rem;
+.max-w-\[22rem\] {
+  max-width: 22rem;
 }
 
-.max-w-44 {
-  max-width: 11rem;
+.max-w-\[21rem\] {
+  max-width: 21rem;
 }
 
-.max-w-48 {
-  max-width: 12rem;
-}
-
-.max-w-7 {
-  max-width: 1.75rem;
-}
-
-.max-w-72 {
-  max-width: 18rem;
-}
-
-.max-w-xl {
-  max-width: 36rem;
-}
-
-.max-w-md {
-  max-width: 28rem;
+.max-w-10 {
+  max-width: 2.5rem;
 }
 
 .-rotate-12 {
@@ -929,16 +938,12 @@ video {
   gap: 1rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-5 {
-  gap: 1.25rem;
-}
-
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
@@ -1003,6 +1008,10 @@ video {
   border-radius: 1rem;
 }
 
+.rounded-\[3\.5rem\] {
+  border-radius: 3.5rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1015,25 +1024,14 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-\[\] {
-  border-radius: ;
-}
-
-.rounded-\[3\.\] {
-  border-radius: 3.;
-}
-
-.rounded-\[3\.5rem\] {
-  border-radius: 3.5rem;
-}
-
 .rounded-t-\[3\.5rem\] {
   border-top-left-radius: 3.5rem;
   border-top-right-radius: 3.5rem;
+}
+
+.rounded-b-\[3\.5rem\] {
+  border-bottom-right-radius: 3.5rem;
+  border-bottom-left-radius: 3.5rem;
 }
 
 .border {
@@ -1047,6 +1045,10 @@ video {
 .border-x {
   border-left-width: 1px;
   border-right-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
 }
 
 .border-b-2 {
@@ -1063,14 +1065,6 @@ video {
 
 .border-t {
   border-top-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
-}
-
-.border-b-4 {
-  border-bottom-width: 4px;
 }
 
 .border-\[\#6975e3\] {
@@ -1108,24 +1102,15 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-\[\] {
-  border-color: ;
-}
-
 .border-x-black {
   --tw-border-opacity: 1;
   border-left-color: rgb(0 0 0 / var(--tw-border-opacity));
   border-right-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.border-t-\[\#E6DCCF\] {
+.border-b-\[\#E6DCCF\] {
   --tw-border-opacity: 1;
-  border-top-color: rgb(230 220 207 / var(--tw-border-opacity));
-}
-
-.border-b-gray-400 {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(156 163 175 / var(--tw-border-opacity));
+  border-bottom-color: rgb(230 220 207 / var(--tw-border-opacity));
 }
 
 .border-b-gray-300 {
@@ -1133,9 +1118,9 @@ video {
   border-bottom-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.border-b-\[\#E6DCCF\] {
+.border-t-\[\#E6DCCF\] {
   --tw-border-opacity: 1;
-  border-bottom-color: rgb(230 220 207 / var(--tw-border-opacity));
+  border-top-color: rgb(230 220 207 / var(--tw-border-opacity));
 }
 
 .bg-\[\#3F52FF\] {
@@ -1163,6 +1148,11 @@ video {
   background-color: rgb(242 237 230 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F3E5B9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 229 185 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#F4F4F4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(244 244 244 / var(--tw-bg-opacity));
@@ -1187,18 +1177,13 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#F3E5B9\] {
+.bg-\[\#F4D35E\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 229 185 / var(--tw-bg-opacity));
+  background-color: rgb(244 211 94 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-\[\] {
-  background-color: ;
+.bg-black\/70 {
+  background-color: rgb(0 0 0 / 0.7);
 }
 
 .object-cover {
@@ -1210,6 +1195,10 @@ video {
   padding: 0.5rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
@@ -1218,16 +1207,16 @@ video {
   padding: 5px;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
-}
-
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-1\.5 {
+  padding: 0.375rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-0 {
@@ -1310,18 +1299,27 @@ video {
   padding-bottom: 1rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
 .pb-2 {
@@ -1336,12 +1334,20 @@ video {
   padding-left: 1rem;
 }
 
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
 .pr-10 {
   padding-right: 2.5rem;
 }
 
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.pr-8 {
+  padding-right: 2rem;
 }
 
 .ps-3 {
@@ -1352,26 +1358,6 @@ video {
   padding-inline-start: 0.875rem;
 }
 
-.ps-6 {
-  padding-inline-start: 1.5rem;
-}
-
-.pl-6 {
-  padding-left: 1.5rem;
-}
-
-.pr-8 {
-  padding-right: 2rem;
-}
-
-.ps-8 {
-  padding-inline-start: 2rem;
-}
-
-.ps-10 {
-  padding-inline-start: 2.5rem;
-}
-
 .ps-9 {
   padding-inline-start: 2.25rem;
 }
@@ -1380,16 +1366,20 @@ video {
   padding-bottom: 4rem;
 }
 
-.pb-14 {
-  padding-bottom: 3.5rem;
+.pb-24 {
+  padding-bottom: 6rem;
 }
 
-.pb-12 {
-  padding-bottom: 3rem;
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 
-.pr-6 {
-  padding-right: 1.5rem;
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .text-center {
@@ -1431,11 +1421,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1453,12 +1438,16 @@ video {
   font-weight: 500;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
 
-.leading-7 {
-  line-height: 1.75rem;
+.leading-5 {
+  line-height: 1.25rem;
 }
 
 .leading-6 {
@@ -1467,6 +1456,16 @@ video {
 
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+
+.text-\[\#1f1f1f\] {
+  --tw-text-opacity: 1;
+  color: rgb(31 31 31 / var(--tw-text-opacity));
+}
+
+.text-\[\#48484d\] {
+  --tw-text-opacity: 1;
+  color: rgb(72 72 77 / var(--tw-text-opacity));
 }
 
 .text-\[\#6B6A64\] {
@@ -1514,23 +1513,25 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
+.text-text-title {
+  --tw-text-opacity: 1;
+  color: rgb(35 35 35 / var(--tw-text-opacity));
 }
 
-.text-\[\#48484d\] {
+.text-\[\#232323\] {
   --tw-text-opacity: 1;
-  color: rgb(72 72 77 / var(--tw-text-opacity));
-}
-
-.text-\[\#1f1f1f\] {
-  --tw-text-opacity: 1;
-  color: rgb(31 31 31 / var(--tw-text-opacity));
+  color: rgb(35 35 35 / var(--tw-text-opacity));
 }
 
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-custom {
+  --tw-shadow: 0 2px 0 rgba(0,0,0,1), inset 0 -1px 4px rgba(0,0,0,.5);
+  --tw-shadow-colored: 0 2px 0 var(--tw-shadow-color), inset 0 -1px 4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1546,6 +1547,11 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-\[\#393939\] {
+  --tw-shadow-color: #393939;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .shadow-\[\#3F52FF\] {
   --tw-shadow-color: #3F52FF;
   --tw-shadow: var(--tw-shadow-colored);
@@ -1556,14 +1562,9 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-\[\] {
-  --tw-shadow-color: ;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-\[\#393939\] {
-  --tw-shadow-color: #393939;
-  --tw-shadow: var(--tw-shadow-colored);
+.grayscale {
+  --tw-grayscale: grayscale(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-transform {
@@ -1625,32 +1626,7 @@ video {
   top: 0px;
 }
 
-.after\:-top-0::after {
-  content: var(--tw-content);
-  top: -0px;
-}
-
-.after\:-top-1::after {
-  content: var(--tw-content);
-  top: -0.25rem;
-}
-
-.after\:bottom-1::after {
-  content: var(--tw-content);
-  bottom: 0.25rem;
-}
-
-.after\:-bottom-1::after {
-  content: var(--tw-content);
-  bottom: -0.25rem;
-}
-
 .after\:h-\[100\%\]::after {
-  content: var(--tw-content);
-  height: 100%;
-}
-
-.after\:h-full::after {
   content: var(--tw-content);
   height: 100%;
 }
@@ -1660,16 +1636,16 @@ video {
   width: 1.75rem;
 }
 
-.after\:bg-\[\#3F52FF\]::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 82 255 / var(--tw-bg-opacity));
-}
-
 .after\:bg-\[\#2FC97F\]::after {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(47 201 127 / var(--tw-bg-opacity));
+}
+
+.after\:bg-\[\#3F52FF\]::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 82 255 / var(--tw-bg-opacity));
 }
 
 .after\:content-\[\'\'\]::after {
@@ -1702,8 +1678,23 @@ video {
   background-color: rgb(163 230 53 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#EFEFEF\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 239 239 / var(--tw-bg-opacity));
+}
+
 .hover\:font-bold:hover {
   font-weight: 700;
+}
+
+.hover\:text-black:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
